Upgrade Thymeleaf